# free-fall-surrogate

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
cfg/: cfg.yaml
data/simulation/splits/: test_data.csv  test_motion_data.csv  test_params_data.csv  train_motion_data.csv  train_params_data.csv  val_data.csv  val_motion_data.csv  val_params_data.csv
scripts/: prepare_data.py  split_parabolic_data.py
src/: evaluate_model_inference.py  generate_parabolic_motion_data.py  plot_actual_vs_predicted_path.py  prepare_data.py  split_parabolic_data.py  split_parabolic_motion_data.py  train_parabolic_motion.py
src/model_definitions/: parabolic_motion_model.py
src/models/: parabolic_motion_model.py
src/training/: epoch_train.py  inference_model_validation.py  train_model.py  training_setup.py
src/utils/: data_utils.py  parabolic_motion_utils.py  validation_utils.py
tests/: test_parabolic_motion.py  test_parabolic_motion_generation.py  test_parabolic_motion_valid_split.py
utils/: utils.py
