[tool.poetry]
name = "free-fall-surrogate"
version = "0.1.0"
description = ""
authors = ["s-sasaki-earthsea-wizard <syota.sasaki@earthsea-wizard.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
pandas = "^2.2.2"
pyyaml = "^6.0.1"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
